--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <a href=https://stackoverflow.com/questions/5899337/proper-way-to-make-html-nested-list>Absolute Path</a>
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   Absolute Path (external link)
-<a href="Gemfile.lock">Relative Path</a>
+<a href="about.html">Relative Path</a>
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
 
