--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
   <title>HTML Links</title>
 </head>
 <body>
-
+<a href=https://stackoverflow.com/questions/5899337/proper-way-to-make-html-nested-list>Absolute Path</a>
   <!-- Challenge 1: Wrap the text below with a link that has an absolute path -->
   Absolute Path (external link)
-
+<a href="about.html">Relative Path</a>
   <!-- Challenge 2: Wrap the text below with a link that has a relative path to about.html-->
   Relative Path (internal link)
 
-  <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
+  <a href="https://www.google.com" target="_blank">Google</a>
   <img src="https://ironboard-learn.s3.amazonaws.com/Image_61_lion.jpg" alt="Image by Alexas Fotos from Pixabay">
-
+<!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
 </body>
 </html>
